@@ -1,2 +1,3 @@
 char *xs_unicode_text (char *, int);
 HV *xs_merge_text (HV *self, HV *current, SV *text_in);
+int xs_abort_empty_line (HV *self, HV *current, SV *additional_text);
